Change plugin name to 'elections'

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -1,55 +1,55 @@
-/* start public_html/polls/style.css */
-.poll-block-last {
+/* start public_html/electoin/style.css */
+.election-block-last {
   margin-bottom:5px;
   padding-bottom:5px;
 }
 
-.poll-topic {
+.election-topic {
   font-weight:bold;
   margin-bottom:10px;
 }
 
-.poll-autotag-message {
+.election-autotag-message {
   font-weight:bold;
   padding-top:5px;
   padding-bottom:5px;
 }
 
-.poll-autotag {
+.election-autotag {
   padding: 5px;
   margin: 0 auto;
 
 }
 
-.poll-autotag-left{
+.election-autotag-left{
   border: .2em dotted black;
   padding: 5px;
   margin-right: auto;
 }
 
-.poll-questions {
+.election-questions {
   margin-bottom:5px;
 }
 
-.poll-questions ul {
+.election-questions ul {
   list-style:none;
   padding:0px;
   margin:0px;
 }
-.poll-questions ul li {
+.election-questions ul li {
     list-style:none;
     padding:0px;
     margin:0;
 }
-.poll-questions ul,
-.poll-questions td {
+.election-questions ul,
+.election-questions td {
   font-size:0.85em;
 }
-.poll-question {
+.election-question {
   padding:0px;
   margin:0px;
 }
-.poll-questions {
+.election-questions {
   padding:2px;
   background-color: #DDDDDD;
   margin:2px;
@@ -60,27 +60,27 @@
   margin:0px;
   vertical-align:top;
 }
-.block-box-right .poll-question-table th,
-.block-box-left .poll-question-table th{
+.block-box-right .election-question-table th,
+.block-box-left .election-question-table th{
   font-size:1.2em;
   font-weight:normal;
 }
 
-.block-box-right .poll_topic,
-.block-box-left .poll_topic{
+.block-box-right .election_topic,
+.block-box-left .election_topic{
   font-weight:bold;
 }
 
-.block-box-right .poll_answer_text,
-.block-box-left  .poll_answer_text{
+.block-box-right .election_answer_text,
+.block-box-left  .election_answer_text{
   text-align:left;
 }
 
-.block-box-right .poll_answer_percent,
-.block-box-left .poll_answer_percent{
+.block-box-right .election_answer_percent,
+.block-box-left .election_answer_percent{
   text-align:right;
 }
-div#polls_block h3 {
+div#election_block h3 {
     color: inherit;
 }
-/* end public_html/polls/style.css */
+/* end public_html/election/style.css */
