Enable clicking on answer text to select answer

--- a/public_html/style.css
+++ b/public_html/style.css
@@ -83,4 +83,10 @@
 div#election_block h3 {
     color: inherit;
 }
+.elections_answers li:not(:first-child) {
+    margin-top:.25em;
+}
+.elections_answers input {
+    margin-right:1em;
+}
 /* end public_html/election/style.css */
